Keep existing data for containerized Swift
Use mounts instead of docker volumes to preserve existing data when
moving from baremetal to containerized Swift.

Change-Id: Ib7cbca2ef674a0245a67b69ee2c77f574d74c181

--- a/docker/services/swift-proxy.yaml
+++ b/docker/services/swift-proxy.yaml
@@ -72,10 +72,15 @@ outputs:
               - /etc/hosts:/etc/hosts:ro
               - /etc/localtime:/etc/localtime:ro
               - /run:/run
-              - swift-srv:/srv
+              - /srv/node:/srv/node
               - /dev:/dev
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      host_prep_tasks:
+        - name: create /srv/node
+          file:
+            path: /srv/node
+            state: directory
       upgrade_tasks:
         - name: Stop and disable swift_proxy service
           tags: step2
