Keep existing data for containerized Libvirt
Use mounts instead of docker volumes to preserve existing data when
moving from baremetal to containerized Libvirt.

Change-Id: I2215d451a4ef4023741f0750ac1b45a94652026a

--- a/docker/services/nova-compute.yaml
+++ b/docker/services/nova-compute.yaml
@@ -83,6 +83,11 @@ outputs:
               - /lib/modules:/lib/modules:ro
               - /run:/run
               - /var/lib/nova:/var/lib/nova
-              - libvirtd:/var/lib/libvirt
+              - /var/lib/libvirt:/var/lib/libvirt
             environment:
              - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      host_prep_tasks:
+        - name: create /var/lib/libvirt
+          file:
+            path: /var/lib/libvirt
+            state: directory
