--- a/docker/services/nova-libvirt.yaml
+++ b/docker/services/nova-libvirt.yaml
@@ -88,7 +88,15 @@ outputs:
               - /var/lib/nova:/var/lib/nova
               # Needed to use host's virtlogd
               - /var/run/libvirt:/var/run/libvirt
-              - libvirtd:/var/lib/libvirt
-              - nova_libvirt_qemu:/etc/libvirt/qemu
+              - /var/lib/libvirt:/var/lib/libvirt
+              - /etc/libvirt/qemu:/etc/libvirt/qemu
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      host_prep_tasks:
+        - name: create libvirt persistent data directories
+          file:
+            path: "{{ item }}"
+            state: directory
+          with_items:
+            - /etc/libvirt/qemu
+            - /var/lib/libvirt
