--- a/docker/services/ironic-pxe.yaml
+++ b/docker/services/ironic-pxe.yaml
@@ -112,7 +112,7 @@ outputs:
               - /etc/hosts:/etc/hosts:ro
               - /etc/localtime:/etc/localtime:ro
               - /dev/log:/dev/log
-              - ironic:/var/lib/ironic/
+              - /var/lib/ironic:/var/lib/ironic/
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
           ironic_pxe_http:
@@ -127,6 +127,11 @@ outputs:
               - /var/lib/config-data/ironic/etc/httpd/conf.modules.d:/etc/httpd/conf.modules.d:ro
               - /etc/hosts:/etc/hosts:ro
               - /etc/localtime:/etc/localtime:ro
-              - ironic:/var/lib/ironic/
+              - /var/lib/ironic:/var/lib/ironic/
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      host_prep_tasks:
+        - name: create ironic persistent data directory
+          file:
+            path: /var/lib/ironic
+            state: directory
