Cleanup docker services templates
Use yaml anchors wherever possible for image definition and drop unused
anchors.

Renamed parameters to Docker*ConfigImage to clarify that an image is
specifically used to generate configuration files.

Change-Id: I388bd59de7f1d36a3a881fbb723ba5bcba09e637

--- a/docker/services/database/mongodb.yaml
+++ b/docker/services/database/mongodb.yaml
@@ -91,10 +91,7 @@ outputs:
           config_volume: 'mongodb_init_tasks'
           puppet_tags: 'mongodb_database,mongodb_user,mongodb_replset'
           step_config: 'include ::tripleo::profile::base::database::mongodb'
-          config_image:
-            list_join:
-            - '/'
-            - [ {get_param: DockerNamespace}, {get_param: DockerMongodbImage} ]
+          config_image: *mongodb_image
           volumes:
           - "mongodb:/var/lib/mongodb/"
           - "logs:/var/log/kolla:ro"
