--- a/docker/services/heat-api-cfn.yaml
+++ b/docker/services/heat-api-cfn.yaml
@@ -13,7 +13,7 @@ parameters:
     default: 'centos-binary-heat-api-cfn:latest'
     type: string
   # we configure all heat services in the same heat engine container
-  DockerHeatEngineImage:
+  DockerHeatConfigImage:
     description: image
     default: 'centos-binary-heat-engine:latest'
     type: string
@@ -62,7 +62,7 @@ outputs:
         config_image:
           list_join:
             - '/'
-            - [ {get_param: DockerNamespace}, {get_param: DockerHeatEngineImage} ]
+            - [ {get_param: DockerNamespace}, {get_param: DockerHeatConfigImage} ]
       kolla_config:
          /var/lib/kolla/config_files/heat_api_cfn.json:
            command: /usr/bin/heat-api-cfn --config-file /usr/share/heat/heat-dist.conf --config-file /etc/heat/heat.conf
