--- a/docker/services/mistral-engine.yaml
+++ b/docker/services/mistral-engine.yaml
@@ -72,7 +72,7 @@ outputs:
       docker_config:
         step_4:
           mistral_engine:
-            image: &mistral_engine_image
+            image:
               list_join:
                 - '/'
                 - [ {get_param: DockerNamespace}, {get_param: DockerMistralEngineImage} ]
