--- a/docker/services/neutron-l3.yaml
+++ b/docker/services/neutron-l3.yaml
@@ -72,7 +72,7 @@ outputs:
       docker_config:
         step_4:
           neutronl3agent:
-            image: &neutron_l3_agent_image
+            image:
               list_join:
               - '/'
               - [ {get_param: DockerNamespace}, {get_param: DockerNeutronL3AgentImage} ]
