--- a/docker/services/neutron-dhcp.yaml
+++ b/docker/services/neutron-dhcp.yaml
@@ -8,7 +8,7 @@ parameters:
     description: namespace
     default: 'tripleoupstream'
     type: string
-  DockerNeutronApiImage:
+  DockerNeutronDHCPImage:
     description: image
     default: 'centos-binary-neutron-dhcp-agent:latest'
     type: string
@@ -76,10 +76,10 @@ outputs:
       docker_config:
         step_4:
           neutron_dhcp:
-            image: &neutron_dhcp_image
+            image:
               list_join:
                 - '/'
-                - [ {get_param: DockerNamespace}, {get_param: DockerNeutronApiImage} ]
+                - [ {get_param: DockerNamespace}, {get_param: DockerNeutronDHCPImage} ]
             net: host
             pid: host
             privileged: true
