--- a/puppet/services/tacker.yaml
+++ b/puppet/services/tacker.yaml
@@ -75,8 +75,10 @@ outputs:
         tacker::server::bind_host: {get_param: [ServiceNetMap, TackerApiNetwork]}
 
         tacker::keystone::authtoken::project_name: 'service'
-        tacker::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
-        tacker::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
+        tacker::keystone::authtoken::user_domain_name: 'Default'
+        tacker::keystone::authtoken::project_domain_name: 'Default'
+        tacker::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
+        tacker::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
 
         tacker::db::mysql::password: {get_param: TackerPassword}
         tacker::db::mysql::user: tacker
