Add upgrade tasks for aodh containers
Change-Id: I936b31fd24c43e35092b3bfef4454a8da81d19c8

--- a/docker/services/aodh-api.yaml
+++ b/docker/services/aodh-api.yaml
@@ -117,3 +117,7 @@ outputs:
               - logs:/var/log
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      upgrade_tasks:
+        - name: Stop and disable aodh service (running under httpd)
+          tags: step2
+          service: name=httpd state=stopped enabled=no
