--- a/docker/services/keystone.yaml
+++ b/docker/services/keystone.yaml
@@ -176,3 +176,5 @@ outputs:
         - name: Stop and disable keystone service (running under httpd)
           tags: step2
           service: name=httpd state=stopped enabled=no
+      metadata_settings:
+        get_attr: [KeystoneBase, role_data, metadata_settings]
