docker/keystone: Actually set fernet as the default token provider
A previous commit [1] added support for fernet in the keystone docker
service; however, this was not set as the default token provider. This
patch makes it the default.

[1] Id92039b3bad9ecda169323e01de7bebae70f2ba0

Change-Id: Ib44ab61eba0be8ba54bc7d0bdb22437d769cb960

--- a/docker/services/keystone.yaml
+++ b/docker/services/keystone.yaml
@@ -33,7 +33,7 @@ parameters:
   KeystoneTokenProvider:
     description: The keystone token format
     type: string
-    default: 'uuid'
+    default: 'fernet'
     constraints:
       - allowed_values: ['uuid', 'fernet']
 
