Rework container volumes as hostpath mounts
Also add upgrade_tasks to disable corresponding host
services in order to not data race with containers

Change-Id: I19c16aaa3e5a73436ca7aa7d06facf64feee2327
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>

--- a/docker/services/database/mongodb.yaml
+++ b/docker/services/database/mongodb.yaml
@@ -102,8 +102,8 @@ outputs:
           step_config: 'include ::tripleo::profile::base::database::mongodb'
           config_image: *mongodb_image
           volumes:
-          - "mongodb:/var/lib/mongodb/"
-          - "logs:/var/log/kolla:ro"
+          - /var/lib/mongodb:/var/lib/mongodb
+          - logs:/var/log/kolla:ro
       host_prep_tasks:
         - name: create /var/lib/mongodb
           file:
