--- a/docker/services/nova-compute.yaml
+++ b/docker/services/nova-compute.yaml
@@ -91,3 +91,7 @@ outputs:
           file:
             path: /var/lib/libvirt
             state: directory
+      upgrade_tasks:
+        - name: Stop and disable nova-compute service
+          tags: step2
+          service: name=nova-compute state=stopped enabled=no
