--- a/docker/services/nova-ironic.yaml
+++ b/docker/services/nova-ironic.yaml
@@ -85,6 +85,10 @@ outputs:
               - /run:/run
               - /dev:/dev
               - /etc/iscsi:/etc/iscsi
-              - nova_compute:/var/lib/nova/
+              - /var/lib/nova/:/var/lib/nova
             environment:
              - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      upgrade_tasks:
+        - name: Stop and disable nova-compute service
+          tags: step2
+          service: name=nova-compute state=stopped enabled=no
